--- a/templates/edit_character.html
+++ b/templates/edit_character.html
@@ -2,7 +2,6 @@
 {% block content %}
 
     <h3 class="blue-grey-text text-darken-4 center-align">Edit Character</h3>
-
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_character', character_id=character._id) }}">
             <!-- character name -->
@@ -10,7 +9,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix blue-grey-text text-darken-4"></i>
                     <input id="character_name" name="character_name" maxlength="50"
-                        type="text" class="validate">
+                        value="{{ character.character_name }}"type="text" class="validate">
                     <label for="character_name">{{ character.character_name }}</label>
                 </div>
             </div>
@@ -85,21 +84,21 @@
             <div class="row">
                 <div class="input-field col s1 offset-s2">
                     <i class="fas fa-lightbulb prefix blue-grey-text text-darken-4"></i>
-                    <input id="character_strength" name="character_strength" minlength="1" maxlength="2"
+                    <input id="character_wisdom" name="character_wisdom" minlength="1" maxlength="2"
                         value="{{ character.character_wisdom }}" type="text" class="validate">
-                    <label for="character_strength">{{ character.character_wisdom }}</label>
+                    <label for="character_wisdom">{{ character.character_wisdom }}</label>
                 </div>
                 <div class="input-field col s1 offset-s2">
                     <i class="fas fa-brain prefix blue-grey-text text-darken-4"></i>
-                    <input id="character_dexterity" name="character_dexterity" minlength="1" maxlength="2"
+                    <input id="character_intelligence" name="character_intelligence" minlength="1" maxlength="2"
                         value="{{ character.character_intelligence }}" type="text" class="validate">
-                    <label for="character_dexterity">{{ character.character_intelligence }}</label>
+                    <label for="character_intelligence">{{ character.character_intelligence }}</label>
                 </div>
                 <div class="input-field col s1 offset-s2">
                     <i class="fas fa-comments prefix blue-grey-text text-darken-4"></i>
-                    <input id="character_constitution" name="character_constitution" minlength="1" maxlength="2"
+                    <input id="character_charisma" name="character_charisma" minlength="1" maxlength="2"
                         value="{{ character.character_charisma }}" type="text" class="validate">
-                    <label for="character_constitution">{{ character.character_charisma }}</label>
+                    <label for="character_charisma">{{ character.character_charisma }}</label>
                 </div>
             </div>
             <!-- submit edits button -->
