--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
         <div class="container ">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Created By: A.Sandham</h5>
+              <h5 class="white-text author-name">Created By: A.Sandham</h5>
             </div>
             <div class="col l4 offset-l2 s12 center-align">
               <ul class="contact-links">
