minor bug fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body id="background-image">
 
-    <header>
+    <header class="site-header">
     <!--top navbar-->
     <nav class = "nav-extended text-shadow blue-grey darken-4">
         <div class="nav-wrapper">
@@ -66,12 +66,12 @@
         {% endwith %}
     </section>
 
-    <main class="container">
+    <main class="container site-contents">
     {% block content %}
     {% endblock%}
     </main>
 
-    <footer class="page-footer blue-grey darken-4">
+    <footer class="page-footer blue-grey darken-4 site-footer">
         <div class="container ">
           <div class="row">
             <div class="col l6 s12">
@@ -95,12 +95,6 @@
                     <a target="_blank" href="https://twitter.com">
                         <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter/x</span>
-                    </a>
-                </li>
-                <li class="contact">
-                    <a href="{{ url_for('contact') }}">
-                        <i class="fa-solid fa-envelope"  aria-hidden="true"></i>
-                        <span class="sr-only">Contact us</span>
                     </a>
                 </li>
               </ul>
