--- a/templates/characters.html
+++ b/templates/characters.html
@@ -4,11 +4,14 @@
   <h3 class="blue-grey-text text-darken-4 center-align">Character Catalog</h3>
   {% for character in characters %} 
     <li>
-      <div class="collapsible-header white-text blue-grey darken-4 ">
+      <div class="collapsible-header white-text blue-grey darken-4 grey-text">
           <div class="col s3">
             {{ character.character_name }}<br>
-            {{ character.race }} {{ character.class_name }} <a href="{{ url_for('delete_character', character_id=character._id) }}" 
-            class="btn-small red darken-4">Delete</a><br>
+            {{ character.race }} {{ character.class_name }}
+            {% if session.user|lower == character.created_by|lower %}  
+              <a href="{{ url_for('delete_character', character_id=character._id) }}" class="btn-small red darken-4">Delete</a>
+              <a href="{{ url_for('edit_character', character_id=character._id) }}" class="btn-small green darken-4">Edit</a><br>
+            {% endif %}
             {{ character.background_name }}<br>
               <i class="fas fa-caret-down"></i>  
           </div>
