--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,8 @@
   <div class="col s12 m8 offset-m2">
       <div class="card-panel">
         <h3 class="center-align grey-blue-text text-darken-4">
-          {{ username }}'s Profile
+          {{ username }}'s Profile<br>
+          <a href="{{ url_for('add_character') }}" class="btn-small light-blue lighten-1">New Character</a>
         </h3> 
       </div>
   </div>
