--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,25 @@ body {
   padding-right: 5px;
 }
 
+.site-header,
+.site-footer {
+  flex: none; /* 2 */
+}
+
+.site-contents{
+  flex: 1 0 auto; /* 2 */
+  padding: var(--space) var(--space) 0;
+  width: 100%;
+}
+
+.site-content::after {
+  content: '\00a0'; /* &nbsp; */
+  display: block;
+  margin-top: var(--space);
+  height: 0px;
+  visibility: hidden;
+}
+
 .brand-logo{
     font-family: "Ruthie", cursive;
     margin-left: 10px;
@@ -60,6 +79,14 @@ body {
   background-color: #fdfdfd;
 }
 
+.catalog-title{
+  background-color: #fdfdfd;
+}
+
   main {
     flex: 1 0 auto;
+  }
+
+  .sidenav {
+    height: 100% !important;
   }
