updated password bug for heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,3 +90,11 @@ body {
   .sidenav {
     height: 100% !important;
   }
+
+  @media (max-width: 992px){
+
+    .author-name{
+        text-align: center;
+        margin-top: 5px;
+    }
+  }
