Update to documentation

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/c1c806d69a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/d20.png') }}">
     {% block styles %}
     {% endblock %}
     <title>Character Folio</title>
